# photocal

./: Cargo.toml  dates.toml  holidays.toml  localization.toml
src/: colors.rs  main.rs
