[package]
name = "photocal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.23", features = ["derive"] }
font-kit = "0.10.1"
lazy_static = "1.4.0"
rusttype = "0.9.3"
serde_yaml = "0.8.26"
textwidth = "2.1.0"
toml = "0.5.9"
serde_with = "1.14.0"
anyhow = "1.0.66"
split-iter = "0.1.0"
image = "0.23.14"
base64 = "0.13.1"
num-traits = "0.2.15"
derive_more = { git = "https://github.com/JelteF/derive_more", version = "0.99.17" }

[dependencies.chrono]
version = "0.4.23"
features = ["serde"]

[dependencies.serde]
version = "1.0.150"
features = ["derive"]

[dependencies.svg]
git = "https://github.com/ModProg/svg"
branch = "tspan"

[dependencies.const_format]
version= "0.2.30"
features=["fmt"]
